# random-quote-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  temperature.py  test_app.py
.github/workflows/: branch.yaml  main.yaml
blog_app/blog/: app.py  models.py  queries.py
blog_app/tests/: conftest.py
blog_app/tests/test_article/: test_app.py  test_commands.py  test_queries.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
flask_example/: app.py  pyproject.toml  test_app.py
flask_example_1/: pyproject.toml
flask_example_1/.github/workflows/: main.yaml
sample-project/: my_module.py  pyproject.toml
sample-project/sample_project/: reject_loan.py
sample-project/tests/: .mutmut-cache  test_reject_loan.py  test_sample_project_mock.py  test_sample_project_mock_1.py
testing_project/tests/test_sum/: test_another_sum.py
