[tool.poetry]
name = "modern-tdd-python"
version = "0.1.0"
description = ""
authors = ["Chaipat Suwannapoom <bchaipats@gmail.com>"]
readme = "README.md"
packages = [{include = "modern_tdd_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
