[tool.poetry]
name = "random-qoute-generator"
version = "0.1.0"
description = ""
authors = ["Chaipat Suwannapoom <notreal@gmail.com>"]
readme = "README.md"
packages = [{include = "random_qoute_generator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
