[tool.poetry]
name = "random-qoute-generator"
version = "0.1.0"
description = ""
authors = ["Chaipat Suwannapoom <notreal@gmail.com>"]
readme = "README.md"
packages = [{include = "random_qoute_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^5.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
